--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </ul>
             </div>
           </nav>
-          <!--
+          
           <div class="header-bottom-actions">
             <button class="header-bottom-actions-btn" aria-label="Search">
               <ion-icon name="search-outline"></ion-icon>
@@ -159,12 +159,12 @@
               <span>Profile</span>
             </button>
 
-            <!-- <button class="header-bottom-actions-btn" aria-label="Cart">
+             <button class="header-bottom-actions-btn" aria-label="Cart">
               <ion-icon name="cart-outline"></ion-icon>
 
               <span>Cart</span>
             </button>
-            -->
+            
             <button
               class="header-bottom-actions-btn"
               data-nav-open-btn
